--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,6 +39,11 @@ applyDownEvolutions.default=true
 
 play.http.filters = "utils.Filters"
 
+play.filters.csrf.header.bypassHeaders {
+  X-Requested-With = "XMLHttpRequest"
+  Csrf-Token = "nocheck"
+}
+
 play.filters.headers.contentSecurityPolicy="default-src 'self'; img-src 'self' fbcdn-profile-a.akamaihd.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' fonts.gstatic.com fonts.googleapis.com maxcdn.bootstrapcdn.com cdnjs.cloudflare.com; script-src 'self' cdnjs.cloudflare.com clef.io; connect-src 'self' twitter.com *.xing.com; frame-src clef.io"
 
 include "silhouette.conf"
